# tgchan-bookmark-bot

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  schema.sql
.github/workflows/: ci.yaml
