[tool.poetry]
name = "tgchan-bookmark-bot"
version = "0.1.2"
description = "After you save a page as bookmark, post it in the Telegram channel"
authors = ["myl7 <myl@myl.moe>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
python-telegram-bot = "^20.3"
python-dotenv = "^1.0.0"
aiosqlite = "^0.19.0"
aiohttp = "^3.8.5"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
